themes/trafiklab-2024/assets/sass/shortcodes/_tabs.scss
.code-tabs {

  .tab-content {
    overflow: hidden;
  }

  .tab-content > .tab-pane {
    display: none;
  }

  .tab-content > .active {
    display: block;
  }

  .nav-tabs {
    position: unset;
    width: unset;
    color: #0f0f0f;
    background: $color-black;
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
  }

  .nav-tabs > li {
    color: $color-black;
    float: left;
  }

  .nav-tabs > li > a {
    color: #717171 !important;
    font-weight: bold;
    display: block;
    padding: 1rem;
    text-decoration: none;
    border-bottom: none !important;

    &:hover {
      --show-active-line: 1;
      color: $color-white !important;

      &::after {
        width: 100%;
      }
    }

    &::after {
      content: "";
      display: block;
      bottom: 1rem;
      height: .1875rem;
      width: 0;
      margin: 0 auto;
      opacity: var(--show-active-line);
      background: $color-purple;
      transition: width .2s ease-in-out, opacity .2s ease-in-out;
    }
  }

  .nav-tabs > li.active > a {
    color: #fff !important;

    &::after {
      --show-active-line: 1;
      width: 100%;
    }

  }

  .code-tabs {
    margin: 1rem 0;
  }

}

